export interface IYandexTrackerCreateAPI{
    
}