export interface IYandexTrackerDeleteAPI{
    
}