export interface IYandexTrackerUpdateAPI{
    
}